Add docker integration and fix file path mechanism